--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,18 @@ requests==2.22.0
 urllib3==1.25.3
 Werkzeug==0.15.6
 libp2p==0.1.5
-eth_keys==0.3.3
-trinity
-base58
+eth_utils
+async-service==0.1.0a8
+asyncio-cancel-token>=0.2,<0.3
+async_lru>=0.1.0,<1.0.0
+cached-property>=1.5.1,<2
+coincurve>=10.0.0,<11.0.0
+cryptography>=2.5,<2.9
+eth-hash>=0.1.4,<1
+eth-keys>=0.3.3,<0.4.0
+netifaces>=0.10.7<1
+pysha3>=1.0.0,<2.0.0
+SQLAlchemy>=1.3.3,<2
+trio>=0.13.0,<0.14
+trio-typing>=0.3.0,<0.4
+rlp
